2D spherical map && navmesh

--- a/voronoi.html
+++ b/voronoi.html
@@ -7,6 +7,8 @@
         <title>Voronoi</title>
     </head>
     <body>
+        <!-- <button onclick="main(true)">Regenerate</button> --> <!-- faudrait clear le canvas avant -->
+        <!-- <button onclick="CollapseCells()">Collapse cells</button> -->
         <canvas id="canvas" width="12800px" height="7200px"></canvas>
         <script src="voronoi.js"></script> 
     </body>
