save as GIF option

--- a/voronoi.html
+++ b/voronoi.html
@@ -10,6 +10,10 @@
         <!-- <button onclick="main(true)">Regenerate</button> --> <!-- faudrait clear le canvas avant -->
         <!-- <button onclick="CollapseCells()">Collapse cells</button> -->
         <canvas id="canvas" width="1280px" height="720px"></canvas>
-        <script src="voronoi.js"></script> 
+        <script src="./jsgif/LZWEncoder.js"></script>
+        <script src="./jsgif/NeuQuant.js"></script>
+        <script src="./jsgif/GIFEncoder.js"></script>
+        <script src="./jsgif/b64.js"></script>
+        <script src="voronoi.js"></script>
     </body>
 </html>
